# rusty-rogue

./: .gitignore  README.md
documents/: TUTORIAL.md  status-refactor.md
rogue/: Cargo.toml  savegame.json
rogue/src/: animation_system.rs  blessings.rs  color.rs  components.rs  damage_system.rs  dissipation_system.rs  encroachment_system.rs  entity_spawn_system.rs  gamelog.rs  general_movement_system.rs  gui.rs  hunger_system.rs  inventory_system.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  noise.rs  particle_system.rs  player.rs  random_table.rs  rectangle.rs  save_load.rs  spawner.rs  spell_charge_system.rs  status_system.rs  swimming_system.rs  synchronization_systems.rs  targeted_effect_system.rs  untargeted_effect_system.rs  visibility_system.rs  weapon_special_system.rs
rogue/src/components/: ai.rs  animation.rs  equipment.rs  game_effects.rs  hunger.rs  magic.rs  melee.rs  mod.rs  signaling.rs  spawn_despawn.rs  status_effects.rs  swimming.rs  targeting.rs
rogue/src/entity_spawners/: equipment.rs  food.rs  hazards.rs  magic.rs  mod.rs  monsters.rs  player.rs  potions.rs  spells.rs
rogue/src/map_builders/: cellular_automata_map.rs  colormaps.rs  common.rs  components.rs  mod.rs  noise.rs  simple_map.rs
rogue/src/terrain_spawners/: foliage.rs  magic.rs  mod.rs  statues.rs  water.rs
